<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/error_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/coin_logo"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/error_text"
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/error_message"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/try_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/primary_500"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>
